2005-09-09  Derek Price  <derek@ximbiot.com>

	Install glibc porting changes.
	* glob.c, glob_.h: Update with alpha-GNULIB.
	* glob-libc.h: New file from same.

2005-09-08  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h: Don't assume HAVE_GETADDRINFO will be defined when the
	system does not haev getaddrinfo.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* regex_internal.h: Update from GNULIB.

	* getpass.c, regcomp.c, regex_internal.c, regex_internal.h, regexec.c:
	Update from GNULIB.

	Update from GNULIB with alpha-quality patch.
	* Makefile.am: Add getaddrinfo cruft.
	* canon-host.c: Updated to use getaddrinfo module.
	* canon-host.h, gai_strerror.c, getaddrinfo.c, getaddrinfo.h: New
	files.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (mbchar): Remove obsolete module cruft.

2005-09-04  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* glob.c, glob_.h: Updated.
	* Makefile.am: Move glob targets into alpha order.  Add size_max
	module.

	Add canon-host module from GNULIB.
	* canon-host.c: New file.

	Update from GNULIB.
	* Makefile.am: Import modifications from...
	* Makefile.gnulib: ...here.
	* dup-safer.c, fd-safer.c, getpass.c, regcomp.c, regex.c, regex.h,
	regex_internal.c, regex_internal.h, regexec.c, strcase.h,
	strcasecmp.c, strftime.c, strncasecmp.c, strstr.c, strstr.h,
	unistd-safer.h: Updated.
	* mbchar.c, mbchar.h, mbuiter.h, memchr.c, pipe-safer.c, strnlen1.c,
	strnlen1.h, unistd--.h: New files.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* getdelim.c (getdelim): Return EOF on EOF, revisited.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* getdelim.c (getdelim): Return EOF on EOF.

2005-08-12  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* Makefile.am: Update using Makefile.gnulib changes.
	* Makefile.gnulib, dup-safer.c, dup2.c, fnmatch.c, getcwd.c, getcwd.h,
	getline.c, getline.h, getlogin_r.h, mktime.c, openat.h,
	pagealign_alloc.c, quotearg.c, regex.c, regex.h, save-cwd.c,