@@ -72,10 +72,11 @@ char *
 canon_host_r (char const *host, int *cherror)
 {
     char *retval = NULL;
-    static struct addrinfo hints = { .ai_flags = AI_CANONNAME, };
+    static struct addrinfo hints;
     struct addrinfo *res = NULL;
     int status;
 
+    hints.ai_flags = AI_CANONNAME;
     status = getaddrinfo (host, NULL, &hints, &res);
     if (!status)
     {
